--- a/template/overall_header.html
+++ b/template/overall_header.html
@@ -27,7 +27,7 @@
 	Based on style:   prosilver (this is the default phpBB3 style)
 	Original author:  Tom Beddard ( http://www.subBlue.com/ )
 	Original style:   Stocker ( https://www.phpbb.com/customise/db/author/stoker+4.0 )
-	Modified by:	  Origin ( https://caforum.fr/forum/ )
+	Modified by:	  Origin ( https://forums.caforum.fr/ )
 -->
 
 <!-- IF S_ALLOW_CDN -->
