Delete the "empty lines"

--- a/theme/stylesheet.css
+++ b/theme/stylesheet.css
@@ -4,7 +4,7 @@
 	Based on style:     prosilver (the default phpBB 3.3.x style)
 	Original author:	Tom Beddard ( http://www.subblue.com/ )
 	Original style:     Stocker ( https://www.phpbb.com/customise/db/author/stoker+4.0 )
-	Modified by:		Origin ( https://caforum.fr/forum/ )
+	Modified by:		Fred Rimber ( https://forums.caforum.fr/ )
     ------------------------------------------------------------------------------------
 */
 
@@ -1233,11 +1233,3 @@ li.notification-reported strong, li.notification-disapproved strong {
 	background-color: #D31141;
 	color: #ffffff;
 }
-
-
-
-
-
-
-
-
